Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI429NET.VB


    Private Class BTI429_32
        Public Declare Function BTI429_BCDGetData Lib "BTI429.DLL" Alias "_BTI429_BCDGetData@12" (ByVal msg As UInt32, ByVal msb As UInt16, ByVal lsb As UInt16) As UInt32
        Public Declare Function BTI429_BCDGetMant Lib "BTI429.DLL" Alias "_BTI429_BCDGetMant@8" (ByVal msg As UInt32, ByVal sigdig As UInt16) As UInt32
        Public Declare Function BTI429_BCDGetSign Lib "BTI429.DLL" Alias "_BTI429_BCDGetSign@4" (ByVal msg As UInt32) As UInt16
        Public Declare Function BTI429_BCDGetSSM Lib "BTI429.DLL" Alias "_BTI429_BCDGetSSM@4" (ByVal msg As UInt32) As UInt16
        Public Declare Sub BTI429_BCDGetVal Lib "BTI429.DLL" Alias "_BTI429_BCDGetVal@16" (ByRef buf As String, ByVal msg As UInt32, ByVal sigdig As UInt16, ByRef resolstr As String)
        Public Declare Function BTI429_BCDPutData Lib "BTI429.DLL" Alias "_BTI429_BCDPutData@16" (ByVal msg As UInt32, ByVal value As UInt32, ByVal msb As UInt16, ByVal lsb As UInt16) As UInt32
        Public Declare Function BTI429_BCDPutMant Lib "BTI429.DLL" Alias "_BTI429_BCDPutMant@16" (ByVal msg As UInt32, ByVal value As UInt32, ByVal sigdig As UInt16, ByVal sign As UInt16) As UInt32
        Public Declare Function BTI429_BCDPutSign Lib "BTI429.DLL" Alias "_BTI429_BCDPutSign@8" (ByVal msg As UInt32, ByVal sign As UInt16) As UInt32
        Public Declare Function BTI429_BCDPutSSM Lib "BTI429.DLL" Alias "_BTI429_BCDPutSSM@8" (ByVal msg As UInt32, ByVal value As UInt16) As UInt32
        Public Declare Function BTI429_BCDPutVal Lib "BTI429.DLL" Alias "_BTI429_BCDPutVal@16" (ByRef buf As String, ByVal msg As UInt32, ByVal sigdig As UInt16, ByRef resolstr As String) As UInt32
        Public Declare Function BTI429_BNRGetData Lib "BTI429.DLL" Alias "_BTI429_BNRGetData@12" (ByVal msg As UInt32, ByVal msb As UInt16, ByVal lsb As UInt16) As UInt32
        Public Declare Function BTI429_BNRGetMant Lib "BTI429.DLL" Alias "_BTI429_BNRGetMant@8" (ByVal msg As UInt32, ByVal sigbit As UInt16) As UInt32
        Public Declare Function BTI429_BNRGetSign Lib "BTI429.DLL" Alias "_BTI429_BNRGetSign@4" (ByVal msg As UInt32) As UInt16
        Public Declare Function BTI429_BNRGetSSM Lib "BTI429.DLL" Alias "_BTI429_BNRGetSSM@4" (ByVal msg As UInt32) As UInt16
        Public Declare Sub BTI429_BNRGetVal Lib "BTI429.DLL" Alias "_BTI429_BNRGetVal@16" (ByRef buf As String, ByVal msg As UInt32, ByVal sigbit As UInt16, ByRef resolstr As String)
        Public Declare Function BTI429_BNRPutData Lib "BTI429.DLL" Alias "_BTI429_BNRPutData@16" (ByVal msg As UInt32, ByVal value As UInt32, ByVal msb As UInt16, ByVal lsb As UInt16) As UInt32
        Public Declare Function BTI429_BNRPutMant Lib "BTI429.DLL" Alias "_BTI429_BNRPutMant@16" (ByVal msg As UInt32, ByVal value As UInt32, ByVal sigbit As UInt16, ByVal twos As UInt16) As UInt32
        Public Declare Function BTI429_BNRPutSign Lib "BTI429.DLL" Alias "_BTI429_BNRPutSign@8" (ByVal msg As UInt32, ByVal twos As UInt16) As UInt32
        Public Declare Function BTI429_BNRPutSSM Lib "BTI429.DLL" Alias "_BTI429_BNRPutSSM@8" (ByVal msg As UInt32, ByVal value As UInt16) As UInt32
        Public Declare Function BTI429_BNRPutVal Lib "BTI429.DLL" Alias "_BTI429_BNRPutVal@16" (ByRef buf As String, ByVal msg As UInt32, ByVal sigbit As UInt16, ByRef resolstr As String) As UInt32
        Public Declare Function BTI429_ChClear Lib "BTI429.DLL" Alias "_BTI429_ChClear@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ChConfig Lib "BTI429.DLL" Alias "_BTI429_ChConfig@12" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_ChGetCount Lib "BTI429.DLL" Alias "_BTI429_ChGetCount@12" (ByRef rcvcount As Int32, ByRef xmtcount As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_ChGetInfo Lib "BTI429.DLL" Alias "_BTI429_ChGetInfo@12" (ByVal infotype As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ChIs429 Lib "BTI429.DLL" Alias "_BTI429_ChIs429@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ChIsRcv Lib "BTI429.DLL" Alias "_BTI429_ChIsRcv@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ChIsXmt Lib "BTI429.DLL" Alias "_BTI429_ChIsXmt@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_ChPause Lib "BTI429.DLL" Alias "_BTI429_ChPause@8" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_ChPauseCheck Lib "BTI429.DLL" Alias "_BTI429_ChPauseCheck@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_ChResume Lib "BTI429.DLL" Alias "_BTI429_ChResume@8" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_ChStart Lib "BTI429.DLL" Alias "_BTI429_ChStart@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ChStop Lib "BTI429.DLL" Alias "_BTI429_ChStop@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ChSyncDefine Lib "BTI429.DLL" Alias "_BTI429_ChSyncDefine@20" (ByVal enableflag As Int32, ByVal syncmask As UInt16, ByVal pinpolarity As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ChTriggerDefine Lib "BTI429.DLL" Alias "_BTI429_ChTriggerDefine@24" (ByVal enableflag As Int32, ByVal trigmask As UInt16, ByVal trigval As UInt16, ByVal pinpolarity As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_FilterClear Lib "BTI429.DLL" Alias "_BTI429_FilterClear@8" (ByVal basevaladdr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_FilterDefault Lib "BTI429.DLL" Alias "_BTI429_FilterDefault@12" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_FilterRd Lib "BTI429.DLL" Alias "_BTI429_FilterRd@16" (ByVal labelval As Int32, ByVal sdival As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_FilterSet Lib "BTI429.DLL" Alias "_BTI429_FilterSet@20" (ByVal configval As UInt32, ByVal labelval As Int32, ByVal sdimask As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_FilterWr Lib "BTI429.DLL" Alias "_BTI429_FilterWr@20" (ByVal msgaddr As UInt32, ByVal labelval As Int32, ByVal sdival As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_FldGetData Lib "BTI429.DLL" Alias "_BTI429_FldGetData@4" (ByVal msgval As UInt32) As UInt32
        Public Declare Function BTI429_FldGetLabel Lib "BTI429.DLL" Alias "_BTI429_FldGetLabel@4" (ByVal msgval As UInt32) As UInt16
        Public Declare Function BTI429_FldGetParity Lib "BTI429.DLL" Alias "_BTI429_FldGetParity@4" (ByVal msgval As UInt32) As UInt16
        Public Declare Function BTI429_FldGetSDI Lib "BTI429.DLL" Alias "_BTI429_FldGetSDI@4" (ByVal msgval As UInt32) As UInt16
        Public Declare Function BTI429_FldGetValue Lib "BTI429.DLL" Alias "_BTI429_FldGetValue@12" (ByVal msgval As UInt32, ByVal startbit As UInt16, ByVal endbit As UInt16) As UInt32
        Public Declare Function BTI429_FldPutData Lib "BTI429.DLL" Alias "_BTI429_FldPutData@8" (ByVal msgval As UInt32, ByVal data As UInt32) As UInt32
        Public Declare Function BTI429_FldPutLabel Lib "BTI429.DLL" Alias "_BTI429_FldPutLabel@8" (ByVal msgval As UInt32, ByVal label As UInt16) As UInt32
        Public Declare Function BTI429_FldPutSDI Lib "BTI429.DLL" Alias "_BTI429_FldPutSDI@8" (ByVal msgval As UInt32, ByVal sdi As UInt16) As UInt32
        Public Declare Function BTI429_FldPutValue Lib "BTI429.DLL" Alias "_BTI429_FldPutValue@16" (ByVal msgval As UInt32, ByVal dataval As UInt32, ByVal startbit As UInt16, ByVal endbit As UInt16) As UInt32
        Public Declare Function BTI429_ListAsyncCreate Lib "BTI429.DLL" Alias "_BTI429_ListAsyncCreate@16" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ListDataRd Lib "BTI429.DLL" Alias "_BTI429_ListDataRd@8" (ByVal listaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ListDataWr Lib "BTI429.DLL" Alias "_BTI429_ListDataWr@12" (ByVal value As UInt32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ListRcvCreate Lib "BTI429.DLL" Alias "_BTI429_ListRcvCreate@16" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ListStatus Lib "BTI429.DLL" Alias "_BTI429_ListStatus@8" (ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ListXmtCreate Lib "BTI429.DLL" Alias "_BTI429_ListXmtCreate@16" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_MsgBlockRd Lib "BTI429.DLL" Alias "_BTI429_MsgBlockRd@12" (ByRef msgfields As MSGFIELDS429, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_MsgBlockWr Lib "BTI429.DLL" Alias "_BTI429_MsgBlockWr@12" (ByRef msgfields As MSGFIELDS429, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_MsgCountRd Lib "BTI429.DLL" Alias "_BTI429_MsgCountRd@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_MsgCountWr Lib "BTI429.DLL" Alias "_BTI429_MsgCountWr@12" (ByVal bitcount As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_MsgCreate Lib "BTI429.DLL" Alias "_BTI429_MsgCreate@8" (ByVal configval As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_MsgDataCountWr Lib "BTI429.DLL" Alias "_BTI429_MsgDataCountWr@16" (ByVal dataval As UInt32, ByVal bitcount As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_MsgDataRd Lib "BTI429.DLL" Alias "_BTI429_MsgDataRd@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTI429_MsgDataWr Lib "BTI429.DLL" Alias "_BTI429_MsgDataWr@12" (ByVal value As UInt32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Sub BTI429_MsgGroupBlockRd Lib "BTI429.DLL" Alias "_BTI429_MsgGroupBlockRd@16" (<[In](), Out(), MarshalAs(UnmanagedType.LPArray, SizeParamIndex:=2)> ByVal msgfields As MSGFIELDS429(), ByVal msgaddrptr As UInt32(), ByVal nummsgs As Int32, ByVal handleval As IntPtr)
        Public Declare Sub BTI429_MsgGroupBlockWr Lib "BTI429.DLL" Alias "_BTI429_MsgGroupBlockWr@16" (<[In](), Out(), MarshalAs(UnmanagedType.LPArray, SizeParamIndex:=2)> ByVal msgfields As MSGFIELDS429(), ByVal msgaddrptr As UInt32(), ByVal nummsgs As Int32, ByVal handleval As IntPtr)
        Public Declare Sub BTI429_MsgGroupRd Lib "BTI429.DLL" Alias "_BTI429_MsgGroupRd@16" (ByVal msgdataptr As UInt32(), ByVal msgaddrptr As UInt32(), ByVal nummsgs As Int32, ByVal handleval As IntPtr)
        Public Declare Sub BTI429_MsgGroupWr Lib "BTI429.DLL" Alias "_BTI429_MsgGroupWr@16" (ByVal msgdataptr As UInt32(), ByVal msgaddrptr As UInt32(), ByVal nummsgs As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_MsgIsAccessed Lib "BTI429.DLL" Alias "_BTI429_MsgIsAccessed@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
